legend spacing fixes

--- a/civictechprojects/static/css/partials/_LandingController.scss
+++ b/civictechprojects/static/css/partials/_LandingController.scss
@@ -239,6 +239,8 @@
   .lc-legend-container {
     display: flex;
     flex-direction: column;
+    gap: 20px;
+
     svg {
       height: 50px;
       width: 50px; // green dot svg is slightly wider, have to clamp both
@@ -248,6 +250,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    gap: 10px;
   }
 }
 
@@ -278,7 +281,6 @@
   .RecentProjects-cards {
     flex-direction: row;
     flex-wrap: wrap;
-
     .ProjectCard-root {
       flex-basis: 45%;
       min-width: 45%;
@@ -364,6 +366,12 @@
   .LandingController-hero {
     .LandingController-hero-text {
       max-width: 40%;
+    }
+  }
+  .LandingController-chart-section {
+    .lc-legend-container {
+      flex-direction: row;
+      justify-content: space-between;
     }
   }
 }
